%% Modelo de Datos - Entidad Relación
%% Pegar en https://mermaid.live para visualizar

erDiagram
    USERS {
        text id PK
        text email UK
        text password_hash
        text nombre
        text apellido
        text role_id FK
        int is_active
        text cedula
    }
    
    ROLES {
        text id PK
        text name UK
        text description
        int is_system
    }
    
    PERMISSIONS {
        text id PK
        text module
        text action
        text description
    }
    
    ROLE_PERMISSIONS {
        text role_id FK
        text permission_id FK
    }
    
    EMPRESAS {
        text id PK
        text nombre UK
        text rif UK
        text direccion
        text telefono
        int activa
    }
    
    CONTRATISTAS {
        text id PK
        text cedula UK
        text nombre
        text apellido
        text empresa_id FK
        text fecha_vencimiento_praind
        text estado
    }
    
    PROVEEDORES {
        text id PK
        text cedula UK
        text nombre
        text apellido
        text empresa_id FK
        text estado
    }
    
    VISITANTES {
        text id PK
        text cedula UK
        text nombre
        text apellido
        text empresa_id FK
        text empresa
    }
    
    VEHICULOS {
        text id PK
        text placa UK
        text marca
        text modelo
        text color
        text contratista_id FK
        text proveedor_id FK
        text visitante_id FK
    }
    
    GAFETES {
        text numero PK
        text tipo PK
        text estado
    }
    
    INGRESOS_CONTRATISTAS {
        text id PK
        text contratista_id FK
        text cedula
        text tipo_autorizacion
        text modo_ingreso
        text gafete_numero FK
        text gafete_tipo FK
        text fecha_hora_ingreso
        text fecha_hora_salida
    }
    
    INGRESOS_PROVEEDORES {
        text id PK
        text proveedor_id FK
        text empresa_id FK
        text gafete FK
        text gafete_tipo FK
        text fecha_ingreso
        text fecha_salida
        text estado
    }
    
    INGRESOS_VISITAS {
        text id PK
        text visitante_id FK
        text cita_id FK
        text gafete FK
        text gafete_tipo FK
        text fecha_ingreso
        text fecha_salida
        text estado
    }
    
    CITAS {
        text id PK
        text visitante_id FK
        text fecha_programada
        text estado
        text motivo
    }
    
    ALERTAS_GAFETES {
        text id PK
        text gafete_numero
        text ingreso_contratista_id FK
        text ingreso_proveedor_id FK
        text ingreso_visita_id FK
        int resuelto
    }
    
    LISTA_NEGRA {
        text id PK
        text cedula
        text tipo_persona
        text motivo_bloqueo
        int is_active
    }

    %% ================================
    %% RELACIONES
    %% ================================
    
    %% Autenticación y Roles
    USERS ||--o{ ROLES : "tiene"
    ROLES ||--o{ ROLE_PERMISSIONS : "tiene"
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : "pertenece"
    
    %% Empresas emplean personas
    EMPRESAS ||--o{ CONTRATISTAS : "emplea"
    EMPRESAS ||--o{ PROVEEDORES : "emplea"
    EMPRESAS ||--o{ VISITANTES : "emplea"
    
    %% Personas poseen vehículos
    CONTRATISTAS ||--o{ VEHICULOS : "posee"
    PROVEEDORES ||--o{ VEHICULOS : "posee"
    VISITANTES ||--o{ VEHICULOS : "posee"
    
    %% Personas registran ingresos
    CONTRATISTAS ||--o{ INGRESOS_CONTRATISTAS : "registra"
    PROVEEDORES ||--o{ INGRESOS_PROVEEDORES : "registra"
    VISITANTES ||--o{ INGRESOS_VISITAS : "registra"
    VISITANTES ||--o{ CITAS : "programa"
    
    %% Gafetes (FK Compuesta) -> Ingresos
    GAFETES ||--o{ INGRESOS_CONTRATISTAS : "FK compuesta"
    GAFETES ||--o{ INGRESOS_PROVEEDORES : "FK compuesta"
    GAFETES ||--o{ INGRESOS_VISITAS : "FK compuesta"
    
    %% Alertas de gafetes
    GAFETES ||--o{ ALERTAS_GAFETES : "genera alerta"
    INGRESOS_CONTRATISTAS ||--o{ ALERTAS_GAFETES : "origen"
    INGRESOS_PROVEEDORES ||--o{ ALERTAS_GAFETES : "origen"
    INGRESOS_VISITAS ||--o{ ALERTAS_GAFETES : "origen"
